# opus-classical-rust

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.sh  config.yaml  docker-compose.yml  esbuild.js  package.json  pnpm-lock.yaml  rollup.config.js  tsconfig.json
.github/workflows/: publish.yml
frontend/scripts/: Search.svelte  main.ts
frontend/styles/: _blocks.sass  _colors.sass  _footer.sass  _header.sass  _main.sass  _mixins.sass  _reset.sass  site.sass
src/: configuration.rs  helpers.rs  main.rs  startup.rs
src/domain/: composer.rs  composer_search_result.rs  genre.rs  label.rs  mod.rs  performer.rs  period.rs  recording.rs  shared_handler_data.rs  streamer.rs  work.rs
src/handlers/: about.rs  composer.rs  error.rs  helpers.rs  index.rs  mod.rs  not_found.rs  search.rs  work.rs
src/repositories/: database.rs
src/routes/: test.rs
src/templates/: labels.rs  mod.rs
static/: bundle.css  bundle.css.br  bundle.css.map  bundle.js  bundle.js.br  bundle.js.map
static/scripts/: main.js  main.js.br
static/styles/: site.css  site.css.br
templates/: about.html  base.html  composer.html  foo.html  labels.html  periods.html  work.html
templates/pages/: 404.html  composer.html  error.html  periods.html  work.html
templates/partials/: composer_card.html  footer.html  header.html  performer.html  recording_card.html  streamer.html  work_card.html
