[package]
name = "opusclassical"
version = "1.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.17"
tower = "0.4.13"
hyper = { version = "0.14.23", features = ["full"] }
tokio = { version = "1.22.0", features = ["full"] }
env_logger = "0.10.0"
log = "0.4"
config = "0.13.2"
serde = "1.0.147"
serde_json = "1.0.89"
anyhow = "1.0.66"
sqlx = { version = "0.6", default-features = false, features = ["runtime-tokio-native-tls", "macros", "postgres", "offline"] }
tera = "1.17.1"
dotenv = "0.15.0"
tower-http = { version = "0.3.4", features = ["fs", "compression-gzip", "compression-br", "set-header"] }