[package]
name = "opusclassical"
version = "1.1.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.1"
tower = "0.4.13"
hyper = { version = "0.14.23", features = ["full"] }
tokio = { version = "1.23.0", features = ["full"] }
env_logger = "0.10.0"
log = "0.4.17"
config = "0.13.3"
serde = "1.0.150"
serde_json = "1.0.89"
anyhow = "1.0.66"
sqlx = { version = "0.6.2", default-features = false, features = ["runtime-tokio-native-tls", "macros", "postgres", "offline"] }
tera = "1.17.1"
dotenv = "0.15.0"
tower-http = { version = "0.3.5", features = ["fs", "compression-gzip", "compression-br", "set-header"] }